Updated using position

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
         </div>
         <div class="navbar__s3">
          <p>Courses</p>
-         <p>My Learning</p>
+        <div class="mylearning"> <p>My Learning</p>
+        <div class="mylearning__popup">
+            <p>You did not purchase anything yet</p>
+        </div>
+        </div>
+
          <i class="fa-solid fa-cart-shopping" style="color: #00040a;"></i>
          <i class="fa-solid fa-bell" style="color: #00060f;"></i>
          <i class="fa-solid fa-user" style="color: #000000;"></i>
@@ -37,6 +42,10 @@
         </div>
         <div class="sale-image">
             <img src="./images/sale-image.jpg" alt="Sale Image">
+            <div class="sale-image__offer">
+                <h2>Udemy Flash Sale! 24 hours to save.</h2>
+                <p>Get the top courses for just 499. Grab this offer today and enjoy the lifetime access.</p>
+            </div>
 
         </div>
 <div class="recommended">
