--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>Development</p>
              <p>Business</p>
               <p>IT & Software</p>
-               <p>Persnal Development
+               <p>Personal Development
                </p>
                 <p>Design</p>
                  <p>Marketing</p>
